clusters/wrtk8s/minecraft/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bedrock
  namespace: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bedrock
  template:
    metadata:
      labels:
        app: bedrock
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: bedrock
          image: itzg/minecraft-bedrock-server:2026.9.2
          ports:
            - containerPort: 19132
              protocol: UDP
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
            limits:
              memory: 2Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bedrock-data
