clusters/wrtk8s/minecraft/java-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java
  namespace: minecraft
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: java
  template:
    metadata:
      labels:
        app: java
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: java
          image: itzg/minecraft-server:latest
          ports:
            - containerPort: 25565
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
            limits:
              memory: 4Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: java-data
