clusters/wrtk8s/minecraft/java-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java
  namespace: minecraft
spec:
  type: LoadBalancer
  selector:
    app: java
  ports:
    - port: 25565
      targetPort: 25565
      protocol: TCP
