clusters/wrtk8s/minecraft/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bedrock
  namespace: minecraft
spec:
  type: LoadBalancer
  selector:
    app: bedrock
  ports:
    - port: 19132
      targetPort: 19132
      protocol: UDP
